# Gumnam

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  crypto.rs  gui.rs  lib.rs  main.rs  message.rs  peer.rs  snf.rs  storage.rs  tor_service.rs
templates/: error.html  index.html  sent.html
ui-desktop/: README.md  build_macos.sh  flutter_rust_bridge.yaml  pubspec.yaml
ui-desktop/lib/: main.dart
ui-desktop/lib/models/: contact.dart  message.dart
ui-desktop/lib/screens/: home_screen.dart  settings_screen.dart
ui-desktop/lib/services/: chat_provider.dart  pinned_messages_manager.dart  tor_service_provider.dart
ui-desktop/lib/theme/: app_theme.dart
ui-desktop/lib/widgets/chat/: chat_area.dart  contact_info_view.dart  message_bubble.dart  message_reactions.dart  pinned_messages_bar.dart
ui-desktop/lib/widgets/dialogs/: contact_info_dialog.dart  new_chat_dialog.dart
ui-desktop/lib/widgets/profile/: my_profile_view.dart
ui-desktop/lib/widgets/sidebar/: sidebar.dart
ui-desktop/macos/Flutter/: GeneratedPluginRegistrant.swift
ui-desktop/macos/Frameworks/rust_lib.framework/: rust_lib
ui-desktop/macos/Frameworks/rust_lib.framework/Versions/A/Resources/: Info.plist
ui-desktop/macos/Frameworks/rust_lib.framework/Versions/A/_CodeSignature/: CodeResources
ui-desktop/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
ui-desktop/macos/Runner.xcodeproj/: project.pbxproj
ui-desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui-desktop/macos/Runner/Configs/: AppInfo.xcconfig
ui-desktop/rust/: Cargo.toml
ui-desktop/rust/src/: api.rs  frb_generated.rs
ui-desktop/test/: widget_test.dart
