[package]
name = "gumnam"
version = "0.1.0"
edition = "2021"
authors = ["Tor Messenger"]
description = "serverless privacy focused messenger app"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptography
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }
curve25519-dalek = "4.1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "hazmat"] }
base32 = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
chrono = "0.4"
dirs = "5.0"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"

# Networking
socks = "0.3"
reqwest = { version = "0.11", features = ["json", "socks", "multipart"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "kad", "identify", "ping", "macros", "tokio"] }
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
