[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tor_messenger = { path = "../.." }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"
